<resources>
    <string name="app_name">Body Lifestyle Development</string>
    <string name="fitness">Fitness</string>
    <string name="goal">Goal</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_button">Sign In Button</string>
    <string name="bold_app_logo">BOLD App Logo</string>
    <string name="sign_in_with">Sign In with</string>
    <string name="sign_in">Sign In</string>
    <string name="google_logo">Google Logo</string>
    <string name="default_web_client_id"><!--Add your web client id here--></string>
    <string name="sign_out_button">Sign Out</string>
    <string name="sign_out">Sign Out</string>
    <string name="username">Username</string>
    <string name="user_information">USER INFORMATION</string>
    <string name="username_var">BOLD App User</string>
    <string name="email">Email</string>
    <string name="email_var">sample@gmail.com</string>
    <string name="weight">Weight</string>
    <string name="kg">kg</string>
    <string name="_0">0</string>
    <string name="wHint">%s</string>
    <string name="hHint">%s</string>
    <string name="hrHint">%s</string>
    <string name="height">Height</string>
    <string name="cm">cm</string>
    <string name="save_data">Save Data</string>
    <string name="return_to_fitness_list">Return to Fitness List</string>
    <string name="add_new_data">Add New Data</string>
    <string name="bpm">BPM</string>
    <string name="resting_heart_rate">Resting Heart Rate</string>
    <string name="date">Date (YYYY-MM-DD)</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="date_format">%1$d-%2$d-%3$d</string>
    <string name="date_format_split">%s-%s-%s</string>
    <string name="month_day">MONTH DAY</string>
    <string name="year">YEAR</string>
    <string name="bmi">BMI: </string>
    <string name="cardio_health">Cardio Health: </string>
    <string name="delete_data">Delete Fitness Data\n</string>
    <string name="percent0">0%</string>
    <string name="fitness_goal">Fitness Goal</string>
    <string name="task_title">Task Title</string>
    <string name="task_done">Task Done</string>
    <string name="task_information">Task Information</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="task_image">Task Image</string>
    <string name="improve_cardio_health">Improve Cardio Health</string>
    <string name="gain_muscle_mass">Gain Muscle Mass</string>
    <string name="lose_weight">Lose Weight</string>
    <string name="enhance_flexibility">Enhance Flexibility</string>
    <string name="goal_select">None Selected</string>
    <string name="button_select_goal">Select Goal</string>
    <string name="change_goal">Change Goal</string>
    <string name="goal_day">Day %d</string>
    <string name="task_reps">Task Set and Task Repetitions</string>
    <string name="progress_format">%.1f%%</string>
    <string name="task_tutorial">Task Tutorial</string>
    <string name="no_fitness_data">No fitness data available.</string>
    <string name="first_data">Add your first fitness data!</string>
</resources>