<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="10dp"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rvTask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_orange"
        android:padding="12dp">

        <ImageView
            android:id="@+id/completion"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_btn_complete"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintEnd_toStartOf="@+id/tvTaskTitle"
            app:layout_constraintBottom_toBottomOf="@+id/tvTaskTitle"/>

        <TextView
            android:id="@+id/tvTaskTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textSize="23sp"
            android:text="@string/task_title"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTaskReps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="2dp"
            android:textSize="12.5sp"
            android:text="@string/task_reps"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTaskTitle" />

        <ImageButton
            android:id="@+id/imageDone"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@string/task_done"
            app:srcCompat="@drawable/ic_btn_done"
            android:background="@drawable/rounded_btn"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageInfo"/>

        <ImageButton
            android:id="@+id/imageInfo"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@string/task_information"
            app:srcCompat="@drawable/ic_btn_info"
            android:background="@drawable/rounded_btn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvTaskDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/lorem_ipsum"
            android:textColor="@color/light_black"
            android:justificationMode="inter_word"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTaskReps" />

        <WebView
            android:id="@+id/webLink"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/task_tutorial"
            android:background="@color/light_orange"
            android:backgroundTint="@color/light_orange"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTaskDesc" />

        <RelativeLayout
            android:id="@+id/loadingPanel"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTaskDesc"
            android:gravity="center">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/blue"/>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

