<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:padding="15dp">

            <com.google.android.material.card.MaterialCardView
                android:theme="@style/Theme.MaterialComponents.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/orange"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/orange"
                    android:orientation="vertical"
                    android:layout_marginTop="0dp"
                    android:padding="15dp">

                    <com.google.android.material.card.MaterialCardView
                        android:theme="@style/Theme.MaterialComponents.Light"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="30dp"
                        app:cardCornerRadius="10dp"
                        android:layout_gravity="center">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:background="@color/light_orange">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:theme="@style/Theme.MaterialComponents.Light"
                            android:id="@+id/profileImageView"
                            android:layout_marginTop="10dp"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:src="@drawable/bold_app_logo"/>

                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal"
                        android:layout_marginBottom="30dp">

                        <TextView
                            android:id="@+id/usernameTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/username_var"
                            android:textAlignment="center"
                            android:textSize="25sp"
                            android:textColor="@color/black"
                            android:textStyle="bold"/>

                    </LinearLayout>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:theme="@style/Theme.MaterialComponents.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/light_black"
                    android:padding="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/orange"
                            android:text="@string/user_information"
                            android:textSize="20sp"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="15dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/bright_orange"
                            android:text="@string/username"
                            android:textSize="15sp"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/usernameTextView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/light_orange"
                            android:text="@string/username_var"
                            android:textSize="15sp"
                            android:layout_alignParentEnd="true"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/bright_orange"
                            android:text="@string/email"
                            android:textSize="15sp"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/emailTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/light_orange"
                            android:text="@string/email_var"
                            android:textSize="15sp"
                            android:layout_alignParentEnd="true"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/bright_orange"
                            android:text="@string/goal"
                            android:textSize="15sp"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/goalTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/light_orange"
                            android:text="@string/goal_select"
                            android:textSize="15sp"
                            android:layout_alignParentEnd="true"/>
                    </RelativeLayout>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="10dp">

                    <Button
                        android:id="@+id/buttonSelectGoal"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginLeft="60dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="60dp"
                        android:background="@drawable/rounded_btn"
                        android:contentDescription="@string/button_select_goal"
                        android:text="@string/button_select_goal"
                        android:textColor="@color/bright_orange"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/buttonSignOut"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginLeft="60dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="60dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/rounded_btn"
                        android:contentDescription="@string/sign_out_button"
                        android:text="@string/sign_out"
                        android:textColor="@color/orange"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                </LinearLayout>


        </LinearLayout>

    </ScrollView>

</FrameLayout>